--- a/AoC2022.cabal
+++ b/AoC2022.cabal
@@ -6,13 +6,13 @@ cabal-version: 1.12
 
 name:           AoC2022
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/AoC2022#readme>
-homepage:       https://github.com/githubuser/AoC2022#readme
-bug-reports:    https://github.com/githubuser/AoC2022/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2023 Author name here
-license:        BSD3
+description:    Please see the README on GitHub at <https://github.com/Fede-26/AoC2022#readme>
+homepage:       https://github.com/Fede-26/AoC2022#readme
+bug-reports:    https://github.com/Fede-26/AoC2022/issues
+author:         Federico Zotti
+maintainer:     Fede-26
+copyright:      2023 Federico Zotti
+license:        GPLv3
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/AoC2022
+  location: https://github.com/Fede-26/AoC2022
 
 library
   exposed-modules:
