--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                AoC2022
 version:             0.1.0.0
-github:              "githubuser/AoC2022"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2023 Author name here"
+github:              "Fede-26/AoC2022"
+license:             GPLv3
+author:              "Federico Zotti"
+maintainer:          "Fede-26"
+copyright:           "2023 Federico Zotti"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/AoC2022#readme>
+description:         Please see the README on GitHub at <https://github.com/Fede-26/AoC2022#readme>
 
 dependencies:
 - base >= 4.7 && < 5
